--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,56 @@
-/* Insert your CSS here */
+table,th,td{
+    border: 2px black solid;
+}
+table{
+    border-collapse: collapse;
+    width: 800px;
+    margin: 20px 100px;
+    height: 80vh;
+}
+thead{
+    background-color: rgba(235, 12, 12);
+}
+footer{
+    text-align: center;
+    font-style: italic;
+    color: rgb(145, 135, 135);
+    font-weight: 200;
+}
+body{
+    height: 100vh;
+    width: 1000px;
+    margin: 0 auto;
+    box-shadow: 2px 2px 2px 1px black;
+}
+.nom{
+    font-weight: bold;
+}
+.right{
+    padding-left: 300px;
+}
+header{
+    width: 100%;
+    height: 20px;
+    background-color: red;
+
+}
+p{
+    margin-left: 100px;
+}
+tr td:nth-child(1){
+    text-align: center;  
+}
+tr td:nth-child(2){
+    padding-left: 10px;
+}
+.trait{
+    margin-left: 100px;
+    background: red;
+    height: 5px;
+    width: 50px;
+}
+p:nth-child(1),.right{
+    color: red;
+}
+
+
