--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ table{
 thead{
     background-color: rgba(235, 12, 12);
 }
-footer{
+.footer{
     text-align: center;
     font-style: italic;
     color: rgb(145, 135, 135);
@@ -19,8 +19,8 @@ footer{
 main{
     height: 100vh;
     width: 1000px;
-    margin: 10px auto;
-    border: 2px solid black;
+    margin: 25px auto;
+    box-shadow: 5px 5px 9px grey;
 
 }
 .nom{
@@ -33,7 +33,9 @@ header{
     width: 100%;
     height: 20px;
     background-color: red;
-
+}
+th{
+    color: white;
 }
 p{
     margin-left: 100px;
