--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ thead{
     font-style: italic;
     color: rgb(145, 135, 135);
     font-weight: 200;
+    padding-bottom: 10px;
 }
 main{
     height: 100vh;
